--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,3 +11,6 @@
 @import "components/studio/team";
 @import "components/studio/clients";
 @import "components/studio/footer";
+@import "components/studio/modal";
+@import "components/portfolio/filters";
+@import "components/portfolio/projects";
