--- a/sass/components/portfolio/_projects.scss
+++ b/sass/components/portfolio/_projects.scss
@@ -33,11 +33,11 @@
 
   transform: translateY(101%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.projects-item:hover .overlay,
-.projects-item:focus .overlay {
-  transform: translateY(0);
+  .projects-item:hover &,
+  .projects-item:focus & {
+    transform: translateY(0);
+  }
 }
 
 .overlay-text {
@@ -62,13 +62,13 @@
 
 .projects-item {
   transition: box-shadow 250ms $time-function;
-}
 
-.projects-item:hover,
-.projects-item:focus {
-  display: inline-block;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
+  &:hover,
+  &:focus {
+    display: inline-block;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 }
 
 .list-projects {
