--- a/sass/components/portfolio/_filters.scss
+++ b/sass/components/portfolio/_filters.scss
@@ -22,10 +22,17 @@
 
   transition: background-color 250ms $time-function, color 250ms $time-function,
     box-shadow 250ms $time-function;
+
+  &:hover,
+  &:focus {
+    background-color: $accent;
+    color: $second-primary-text-color;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
 }
-.btn-active,
-.buttons:hover,
-.buttons:focus {
+
+.btn-active {
   background-color: $accent;
   color: $second-primary-text-color;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
