--- a/css/main.css
+++ b/css/main.css
@@ -101,23 +101,23 @@ body {
   padding-bottom: 25px;
 }
 
-.site-nav {
+.main-nav-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   margin-left: 93px;
 }
 
-.site-nav .item:not(:last-child) {
+.main-nav-list .main-nav-list-item:not(:last-child) {
   margin-right: 50px;
 }
 
-.site-nav .link:hover,
-.site-nav .link:focus {
+.main-nav-list .link:hover,
+.main-nav-list .link:focus {
   color: #2196f3;
 }
 
-.site-nav .link {
+.main-nav-list .link {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -131,8 +131,8 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.list-contacts .link:hover,
-.list-contacts .link:focus {
+.bottom-left-contacts .link:hover,
+.bottom-left-contacts .link:focus {
   color: #2196f3;
 }
 
@@ -153,8 +153,8 @@ body {
   border-radius: 2px;
 }
 
-.contacts,
-.contacts .items {
+.header-contacts,
+.header-contacts .header-contacts-item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -166,7 +166,7 @@ body {
   vertical-align: middle;
 }
 
-.contacts .items + .items {
+.header-contacts .header-contacts-item + .header-contacts-item {
   margin-left: 30px;
 }
 
@@ -182,8 +182,8 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.items .link:hover,
-.items .link:focus {
+.header-contacts-item .link:hover,
+.header-contacts-item .link:focus {
   color: #2196f3;
 }
 
@@ -191,7 +191,7 @@ body {
   margin-right: 10px;
 }
 
-.contacts .link {
+.header-contacts .link {
   padding-top: 32px;
   padding-bottom: 32px;
   color: #757575;
@@ -269,17 +269,17 @@ main {
       flex-wrap: wrap;
 }
 
-.features-list .item {
+.features-list .features-list-item {
   width: calc((100% - 90px) / 4);
   margin-right: 30px;
   margin-bottom: 30px;
 }
 
-.features-list .item:nth-child(4n) {
+.features-list .features-list-item:nth-child(4n) {
   margin-right: 0;
 }
 
-.features-list .item:nth-last-child(-n + 4) {
+.features-list .features-list-item:nth-last-child(-n + 4) {
   margin-bottom: 0;
 }
 
@@ -340,17 +340,17 @@ main {
       flex-wrap: wrap;
 }
 
-.work-list .item {
+.work-list .work-list-item {
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
 }
 
-.work-list .item:nth-child(3n) {
+.work-list .work-list-item:nth-child(3n) {
   margin-right: 0;
 }
 
-.work-list .item:nth-last-child(-n + 3) {
+.work-list .work-list-item:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
 
@@ -358,7 +358,7 @@ main {
   position: relative;
 }
 
-.work-text {
+.work-list-text {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -400,7 +400,7 @@ main {
       flex-wrap: wrap;
 }
 
-.team-list .item {
+.team-list-item {
   text-align: center;
   width: 270px;
   margin-right: 30px;
@@ -411,15 +411,15 @@ main {
   border-radius: 0px 0px 4px 4px;
 }
 
-.team-list .item:nth-child(4n) {
+.team-list-item:nth-child(4n) {
   margin-right: 0;
 }
 
-.team-list .item:nth-last-child(-n + 4) {
+.team-list-item:nth-last-child(-n + 4) {
   margin-bottom: 0;
 }
 
-.item .item-bottom {
+.team-list-item-bottom {
   padding-top: 30px;
   padding-right: 32px;
   padding-bottom: 30px;
@@ -484,7 +484,7 @@ main {
   margin-right: 10px;
 }
 
-.item-bottom.icon {
+.team-list-item-bottom.icon {
   padding: 0;
 }
 
@@ -496,21 +496,21 @@ main {
       flex-wrap: wrap;
 }
 
-.clients-list .item {
+.clients-list-item {
   width: calc((100% - 150px) / 6);
   margin-right: 30px;
   margin-bottom: 30px;
 }
 
-.clients-list .item:nth-child(6n) {
+.clients-list-item:nth-child(6n) {
   margin-right: 0;
 }
 
-.clients-list .item:nth-last-child(-n + 6) {
+.clients-list-item:nth-last-child(-n + 6) {
   margin-bottom: 0;
 }
 
-.item-box {
+.clients-box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -529,7 +529,7 @@ main {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.item-box:hover, .item-box:focus {
+.clients-box:hover, .clients-box:focus {
   border-color: #2196f3;
   color: #2196f3;
 }
@@ -563,7 +563,7 @@ main {
   margin-right: 70px;
 }
 
-.list-title {
+.bottom-left-title {
   margin-bottom: 9px;
   color: #ffffff;
   font-style: normal;
@@ -571,15 +571,15 @@ main {
   line-height: 1.71;
 }
 
-.list-contacts {
+.bottom-left-contacts {
   margin-bottom: 9px;
 }
 
-.list-contacts:last-child {
+.bottom-left-contacts:last-child {
   margin-bottom: 0;
 }
 
-.list-contacts .link {
+.bottom-left-contacts .link {
   color: white;
   font-size: 14px;
   line-height: 1.71;
@@ -587,11 +587,11 @@ main {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.links {
+.social-net {
   margin-right: 93px;
 }
 
-.bottom-title {
+.social-net-title {
   margin-top: 0;
   margin-bottom: 20px;
   font-weight: 700;
@@ -601,7 +601,7 @@ main {
   color: #ffffff;
 }
 
-.bottom-icon-list {
+.social-net-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -612,7 +612,7 @@ main {
   padding-left: 0;
 }
 
-.bottom-icon-list-item .link {
+.social-net-link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -634,22 +634,22 @@ main {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.bottom-icon-list-item .link:hover, .bottom-icon-list-item .link:focus {
+.social-net-link:hover, .social-net-link:focus {
   background-color: #2196f3;
 }
 
-.bottom-icon-list-item:not(:last-child) {
+.social-net-list-item:not(:last-child) {
   margin-right: 10px;
 }
 
-.form {
+.bottom-form {
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.form-label {
+.bottom-form-label {
   position: absolute;
   left: 16px;
   top: 15px;
@@ -669,7 +669,7 @@ main {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-input {
+.bottom-form-input {
   height: 50px;
   width: 358px;
   padding-left: 16px;
@@ -681,13 +681,13 @@ main {
   border-radius: 4px;
 }
 
-.form-input:focus + .form-label,
-.form-input:not(:placeholder-shown) + .form-label {
+.bottom-form-input:focus + .bottom-form-label,
+.bottom-form-input:not(:placeholder-shown) + .bottom-form-label {
   -webkit-transform: translateX(-75px);
           transform: translateX(-75px);
 }
 
-.form-btn {
+.bottom-form-btn {
   margin-left: 12px;
   padding: 10px 29px;
   font-weight: 700;
@@ -710,7 +710,7 @@ main {
   border-style: none;
 }
 
-.form-btn-icon {
+.bottom-form-btn-icon {
   margin-left: 10px;
 }
 
@@ -812,17 +812,17 @@ main {
   text-align: center;
 }
 
-.modal-field {
+.modal-form-field {
   position: relative;
   display: block;
   margin-bottom: 28px;
 }
 
-.modal-field:nth-child(4) {
+.modal-form-field:nth-child(4) {
   margin-bottom: 20px;
 }
 
-.modal-field.checkbox {
+.modal-form-field.checkbox {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -932,18 +932,18 @@ main {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-field:hover .modal-icon,
-.modal-field:focus-within > .modal-icon {
+.modal-form-field:hover .modal-icon,
+.modal-form-field:focus-within > .modal-icon {
   color: #2196f3;
 }
 
-.modal-field:hover .modal-input,
-.modal-field:focus-within > .modal-input {
+.modal-form-field:hover .modal-input,
+.modal-form-field:focus-within > .modal-input {
   border: 1px solid #2196f3;
   outline: 1px solid #2196f3;
 }
 
-.modal-field:focus-within > .modal-label {
+.modal-form-field:focus-within > .modal-label {
   -webkit-transform: translate(-42px, -39px);
           transform: translate(-42px, -39px);
 }
@@ -1014,7 +1014,7 @@ main {
   background-color: #188ce8;
 }
 
-.btn {
+.filter {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1023,11 +1023,11 @@ main {
           justify-content: center;
 }
 
-.btn .item:not(:last-child) {
+.filter-item:not(:last-child) {
   margin-right: 8px;
 }
 
-.buttons {
+.filter-btn {
   padding: 6px 22px 6px 22px;
   font-family: inherit;
   cursor: pointer;
@@ -1043,7 +1043,7 @@ main {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.buttons:hover, .buttons:focus {
+.filter-btn:hover, .filter-btn:focus {
   background-color: #2196f3;
   color: #ffffff;
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -1066,21 +1066,21 @@ main {
   margin-top: 50px;
 }
 
-.projects .item {
+.projects-card {
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
 }
 
-.projects .item:nth-child(3n) {
+.projects-card:nth-child(3n) {
   margin-right: 0;
 }
 
-.projects .item:nth-last-child(-n + 3) {
+.projects-card:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
 
-.picture {
+.projects-picture {
   position: relative;
   overflow: hidden;
 }
@@ -1100,8 +1100,8 @@ main {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.projects-item:hover .overlay,
-.projects-item:focus .overlay {
+.projects-link:hover .overlay,
+.projects-link:focus .overlay {
   -webkit-transform: translateY(0);
           transform: translateY(0);
 }
@@ -1115,7 +1115,7 @@ main {
   line-height: 1.56;
 }
 
-.item-line {
+.projects-card-bottom {
   padding-top: 20px;
   padding-bottom: 20px;
   padding-left: 23px;
@@ -1125,20 +1125,20 @@ main {
   border-bottom: 1px solid #eeeeee;
 }
 
-.projects-item {
+.projects-link {
   -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.projects-item:hover, .projects-item:focus {
+.projects-link:hover, .projects-link:focus {
   display: inline-block;
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.list-projects {
+.projects-card-bottom-title {
   width: 322px;
   margin-top: 0;
   margin-bottom: 4px;
@@ -1149,7 +1149,7 @@ main {
   color: #212121;
 }
 
-.list-items {
+.projects-card-bottom-unit {
   width: 322px;
   margin-top: 0;
   margin-bottom: 0;
