--- a/sass/components/portfolio/_projects.scss
+++ b/sass/components/portfolio/_projects.scss
@@ -4,7 +4,7 @@
   margin-top: 50px;
 }
 
-.projects .item {
+.projects-card {
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
@@ -17,7 +17,7 @@
   }
 }
 
-.picture {
+.projects-picture {
   position: relative;
   overflow: hidden;
 }
@@ -34,8 +34,8 @@
   transform: translateY(101%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  .projects-item:hover &,
-  .projects-item:focus & {
+  .projects-link:hover &,
+  .projects-link:focus & {
     transform: translateY(0);
   }
 }
@@ -50,7 +50,7 @@
   line-height: 1.56;
 }
 
-.item-line {
+.projects-card-bottom {
   padding-top: 20px;
   padding-bottom: 20px;
   padding-left: 23px;
@@ -60,7 +60,7 @@
   border-bottom: 1px solid #eeeeee;
 }
 
-.projects-item {
+.projects-link {
   transition: box-shadow 250ms $time-function;
 
   &:hover,
@@ -71,7 +71,7 @@
   }
 }
 
-.list-projects {
+.projects-card-bottom-title {
   width: 322px;
   margin-top: 0;
   margin-bottom: 4px;
@@ -82,7 +82,7 @@
   color: $primary-text-color;
 }
 
-.list-items {
+.projects-card-bottom-unit {
   width: 322px;
   margin-top: 0;
   margin-bottom: 0;
