--- a/sass/components/studio/_features.scss
+++ b/sass/components/studio/_features.scss
@@ -3,7 +3,7 @@
   flex-wrap: wrap;
 }
 
-.features-list .item {
+.features-list .features-list-item {
   width: calc((100% - 90px) / 4);
   margin-right: 30px;
   margin-bottom: 30px;
