--- a/sass/components/studio/_team.scss
+++ b/sass/components/studio/_team.scss
@@ -12,7 +12,7 @@
   flex-wrap: wrap;
 }
 
-.team-list .item {
+.team-list-item {
   text-align: center;
   width: 270px;
   margin-right: 30px;
@@ -32,7 +32,7 @@
   }
 }
 
-.item .item-bottom {
+.team-list-item-bottom {
   padding-top: 30px;
   padding-right: 32px;
   padding-bottom: 30px;
@@ -91,6 +91,6 @@
   margin-right: 10px;
 }
 
-.item-bottom.icon {
+.team-list-item-bottom.icon {
   padding: 0;
 }
